// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test HalftoneBlock should render correctly 1`] = `
<div>
  <div
    class="panel"
  >
    <span
      class="title"
    >
      Halftone
      <span
        aria-label="question-circle"
        class="anticon anticon-question-circle icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="question-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
          />
        </svg>
      </span>
    </span>
    <select
      class="inline-select"
    >
      <option
        value="1"
      >
        FM
      </option>
      <option
        value="2"
      >
        AM
      </option>
    </select>
  </div>
</div>
`;

exports[`test HalftoneBlock should render correctly when type is modal 1`] = `
<div>
  <div
    class="panel"
  >
    <span
      class="title"
    >
      Halftone
      <span
        aria-label="question-circle"
        class="anticon anticon-question-circle icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="question-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
          />
        </svg>
      </span>
    </span>
    <select
      class="inline-select"
    >
      <option
        value="1"
      >
        FM
      </option>
      <option
        value="2"
      >
        AM
      </option>
    </select>
  </div>
</div>
`;

exports[`test HalftoneBlock should render correctly when type is panel-item 1`] = `
<div>
  <div
    class="object-panel-item"
    id="halftone-type"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded select-button"
        type="button"
      >
        <span>
          <div
            class="selected-content"
          >
            FM
            <span
              aria-label="down"
              class="anticon anticon-down"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </div>
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Halftone
    </div>
  </div>
</div>
`;
